--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,24 @@
-name: Generate tag version
+name: fhir-ui, release
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: New version
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
+  release:
+   types:
+     - "published"
 
 jobs:
-  version:
-    name: Create new version ${{ github.event.inputs.version }}
+  publish-pkg:
+    name: fhir-ui
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          ref: main
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-
-      - name: Generate new version
-        run: npm version ${{ github.event.inputs.version }}
-
-      - name: Push new version tag to repository
-        run: git push origin main --tags
+          node-version: 16.17.0
+          registry-url: https://npm.pkg.github.com
+      - run: npm ci
+      - run: npm run build
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
