--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fhir-ui",
+  "name": "@rahulideas2it/fhir-ui",
   "private": false,
-  "version": "0.0.3",
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -19,8 +19,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -30,6 +28,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "glob": "^10.3.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.7.0",
@@ -39,9 +39,12 @@
     "**/*.css"
   ],
   "publishConfig": {
-    "@rahulideas2it:registry": "https://npm.pkg.github.com"
+    "@rahulideas2it:registry": "https://npm.pkg.github.com/"
   },
   "repository": {
     "url": "https://github.com/rahulideas2it/fhir-ui.git"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
   }
 }
